Chore: Replace deprecated `URLDecoder` method with `StandardCharsets.UTF_8`